--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ line_length = 100
 
 [tool.ruff]
 line-length = 100
-ignore = ["E741", "B028", "B006", "B008", "B023"]
+ignore = ["E741", "B028", "B006", "B008", "B023", "T201"]
 select = ["E", "F", "W", "N", "B", "T"]
 
 [tool.ruff.pydocstyle]
