--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "openai",
     "ipython",
     "nbformat",
+    "cri_lib@git+https://github.com/CommonplaceRobotics/CRI-Python-Lib.git"
 ]
 
 [build-system]
