--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["agent", "environment"]
+packages = ["agent", "environment", "robot", "utils"]
 package-dir = { "" = "src" }
 
 
