New docker setup.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,27 +3,33 @@ services:
     image: "robotdemo:latest"
     build:
       context: "."
+    network_mode: host
     environment:
       - PYTHONUNBUFFERED=1
+      - OPENAI_API_KEY=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
     command: "python scripts/run_std_env.py"
 
   env:
     image: "robotdemo:latest"
     build:
       context: "."
+    network_mode: host
+    volumes:
+      - ./data:/app/data
     environment:
       - PYTHONUNBUFFERED=1
+      - OPENAI_API_KEY=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
     command: "python scripts/run_mock_env.py"
 
   agent:
     image: "robotdemo:latest"
     build:
       context: "."
-    environment:
-      - PYTHONUNBUFFERED=1
-      - ENV_HOST_ADRESS=env
-      - STD_ENV_HOST_ADRESS=std_env
-    command: "python scripts/run_agent.py"
+    network_mode: host
     depends_on:
       - env
       - std_env
+    environment:
+      - PYTHONUNBUFFERED=1
+      - OPENAI_API_KEY=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
+    command: "python scripts/run_agent.py"
