New version of llama-index has different multimodal handling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "fastapi",
     "uvicorn",
     "pydantic",
-    "llama-index",
+    "llama-index==0.12.4",
     "openai",
     "ipython",
     "nbformat",
