--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "fastapi",
     "uvicorn",
     "pydantic",
-    "llama-index",
+    "llama-index==0.11.23",
     "openai",
     "ipython",
     "nbformat",
